--- a/references.bib
+++ b/references.bib
@@ -343,6 +343,23 @@
   copyright = {MIT}
 }
 
+@article{borenThinkingAloudReconciling2000,
+  title = {Thinking Aloud: Reconciling Theory and Practice},
+  shorttitle = {Thinking Aloud},
+  author = {Boren, T. and Ramey, J.},
+  year = {2000},
+  month = sep,
+  journal = {IEEE Transactions on Professional Communication},
+  volume = {43},
+  number = {3},
+  pages = {261--278},
+  issn = {1558-1500},
+  doi = {10.1109/47.867942},
+  urldate = {2023-11-15},
+  abstract = {Thinking-aloud protocols may be the most widely used method in usability testing, but the descriptions of this practice in the usability literature and the work habits of practitioners do not conform to the theoretical basis most often cited for it: K.A. Ericsson and H.A. Simon's (1984) seminal work. After reviewing Ericsson and Simon's theoretical basis for thinking aloud, we review the ways in which actual usability practice diverges from this model. We then explore the concept of speech genre as an alternative theoretical framework. We first consider uses of this new framework that are consistent with Ericsson and Simon's goal of eliciting a verbal report that is as undirected, undisturbed and constant as possible. We then go on to consider how the proposed new approach might handle problems that arise in usability testing that appear to require interventions not supported in the older model.},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Boren_Ramey_2000_Thinking aloud.pdf}
+}
+
 @article{bossuytSTARDStatementReporting2003,
   title = {The {{STARD}} Statement for Reporting Studies of Diagnostic Accuracy: Explanation and Elaboration},
   shorttitle = {The {{STARD}} Statement for Reporting Studies of Diagnostic Accuracy},
@@ -1358,6 +1375,22 @@
   langid = {english}
 }
 
+@article{laffalEricssonAndersSimon1985,
+  title = {Ericsson, {{K}}. {{Anders}}, and {{Simon}}, {{Herbert A}}. {{Protocol Analysis}}: {{Verbal Reports}} as {{Data}}. {{MIT Press}}, {{Cambridge}}, {{MA}}, 1984. Viii + 426 Pp. \$27.50},
+  shorttitle = {Ericsson, {{K}}. {{Anders}}, and {{Simon}}, {{Herbert A}}. {{Protocol Analysis}}},
+  author = {Laffal, Julius},
+  year = {1985},
+  month = nov,
+  journal = {The Journal of Nervous and Mental Disease},
+  volume = {173},
+  number = {11},
+  pages = {703},
+  issn = {0022-3018},
+  urldate = {2023-11-15},
+  abstract = {An abstract is unavailable. This article is available as a PDF only.},
+  langid = {american}
+}
+
 @inbook{lavrakasAcquiescenceResponseBias2008,
   title = {Acquiescence {{Response Bias}}},
   booktitle = {Encyclopedia of {{Survey Research Methods}}},
@@ -1548,6 +1581,26 @@
   pmid = {28380050},
   keywords = {\_tablet,*Animal Experimentation/st [Standards],*awareness,*China,*experimental design,*Publications/st [Standards],*Research Personnel/sn [Statistics \textbackslash\& Numerical Data],*Research Personnel/sn [Statistics \& Numerical Data],*scientist,Animal Shells,Animals,Bias,checklist,chi square test,China,controlled study,doctor patient relation,editor,experimental study,gold standard,human,Humans,Medical journals,Medical risk factors,Medicine and health sciences,meta analysis,Metaanalysis,nonhuman,practice guideline,publication,questionnaire,Research Design,Research Personnel/px [Psychology],Risk Factors,software,student,Survey research,Surveys,systematic review,Systematic reviews},
   file = {/Users/james/Zotero/storage/DH45CEBH/Ma et al_2017_Survey of basic medical researchers on the awareness of animal experimental.pdf;/Users/james/Zotero/storage/MWND7YIQ/Ma et al_2017_Survey of basic medical researchers on the awareness of animal experimental.pdf;/Users/james/Zotero/storage/KVMY7Y8Z/article.html}
+}
+
+@article{mccallDevelopmentMobileApp2021,
+  title = {Development of a {{Mobile App}} to {{Support Self-management}} of {{Anxiety}} and {{Depression}} in {{African American Women}}: {{Usability Study}}},
+  shorttitle = {Development of a {{Mobile App}} to {{Support Self-management}} of {{Anxiety}} and {{Depression}} in {{African American Women}}},
+  author = {McCall, Terika and Ali, Muhammad Osama and Yu, Fei and Fontelo, Paul and Khairat, Saif},
+  year = {2021},
+  month = aug,
+  journal = {JMIR formative research},
+  volume = {5},
+  number = {8},
+  pages = {e24393},
+  issn = {2561-326X},
+  doi = {10.2196/24393},
+  abstract = {BACKGROUND: Anxiety and depressive disorders are the most common mental health conditions among African American women. Despite the need for mental health care, African American women significantly underuse mental health services. Previous mobile health studies revealed significant improvements in anxiety or depressive symptoms after intervention. The use of mobile apps offers the potential to eliminate or mitigate barriers for African American women who are seeking access to mental health services and resources. OBJECTIVE: This study aims to evaluate the usability of the prototype of an app that is designed for supporting the self-management of anxiety and depression in African American women. METHODS: Individual usability testing sessions were conducted with 15 participants in Chapel Hill, North Carolina. Cognitive walkthrough and think-aloud protocols were used to evaluate the user interface. Eye-tracking glasses were used to record participants' visual focus and gaze path as they performed the tasks. The Questionnaire for User Interface Satisfaction was administered after each session to assess the participants' acceptance of the app. RESULTS: Participants rated the usability of the prototype positively and provided recommendations for improvement. The average of the mean scores for usability assessments (ie, overall reactions to the software, screen, terminology and app information, learning, and app capabilities) ranged from 7.2 to 8.8 on a scale of 0-9 (low to high rating) for user tasks. Most participants were able to complete each task with limited or no assistance. Design recommendations included improving the user interface by adding graphics and color, adding a tutorial for first-time users, curating a list of Black women therapists within the app, adding details about tracking anxiety and depression in the checkup graphs, informing users that they can use the talk-to-text feature for journal entries to reduce burden, relabeling the mental health information icon, monitoring for crisis support, and improving clickthrough sequencing. CONCLUSIONS: This study provides a better understanding of user experience with an app tailored to support the management of anxiety and depression for African American women, which is an underserved group. As African American women have high rates of smartphone ownership, there is a great opportunity to use mobile technology to provide access to needed mental health services and resources. Future work will include incorporating feedback from usability testing and focus group sessions to refine and develop the app further. The updated app will undergo iterative usability testing before launching the pilot study to evaluate the feasibility and acceptability of the prototype.},
+  langid = {english},
+  pmcid = {PMC8408754},
+  pmid = {34133313},
+  keywords = {African Americans,anxiety,depression,digital health,mental health,mHealth,mobile applications,mobile phone,telemedicine,user-centered design,women},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/McCall et al_2021_Development of a Mobile App to Support Self-management of Anxiety and.pdf}
 }
 
 @article{mcdonoughj.FamiliarityNonindustryAuthors2011,
@@ -1771,6 +1824,23 @@
   langid = {american},
   keywords = {\_tablet},
   file = {/Users/james/Zotero/storage/6YDDEEPQ/O’Brien et al_2014_Standards for Reporting Qualitative Research.pdf;/Users/james/Zotero/storage/BWTCIS8F/O’Brien et al_2014_Standards for Reporting Qualitative Research.pdf}
+}
+
+@article{ocathainThreeTechniquesIntegrating2010a,
+  title = {Three Techniques for Integrating Data in Mixed Methods Studies},
+  author = {O'Cathain, A. and Murphy, E. and Nicholl, J.},
+  year = {2010},
+  month = sep,
+  journal = {BMJ},
+  volume = {341},
+  number = {sep17 1},
+  pages = {c4587-c4587},
+  issn = {0959-8138, 1468-5833},
+  doi = {10.1136/bmj.c4587},
+  urldate = {2023-11-16},
+  langid = {english},
+  keywords = {to read},
+  file = {/Users/james/Zotero/storage/EVJVW6XH/O'Cathain et al. - 2010 - Three techniques for integrating data in mixed met.pdf}
 }
 
 @article{pagePRISMA2020Statement2021,
@@ -2295,6 +2365,25 @@
   file = {/Users/james/Zotero/storage/DMDVHQHU/Svensøy et al_2021_A Qualitative Study on Researchers’ Experiences after Publishing Scientific.pdf;/Users/james/Zotero/storage/CCTQHMZZ/E9D7F39DD262CD863A9B7A0BEBAF217E.html}
 }
 
+@article{szinayInfluencesUptakeHealth2021,
+  title = {Influences on the {{Uptake}} of {{Health}} and {{Well-being Apps}} and {{Curated App Portals}}: {{Think-Aloud}} and {{Interview Study}}},
+  shorttitle = {Influences on the {{Uptake}} of {{Health}} and {{Well-being Apps}} and {{Curated App Portals}}},
+  author = {Szinay, Dorothy and Perski, Olga and Jones, Andy and Chadborn, Tim and Brown, Jamie and Naughton, Felix},
+  year = {2021},
+  month = apr,
+  journal = {JMIR mHealth and uHealth},
+  volume = {9},
+  number = {4},
+  pages = {e27173},
+  publisher = {{JMIR Publications Inc., Toronto, Canada}},
+  doi = {10.2196/27173},
+  urldate = {2023-11-16},
+  abstract = {Background: Health and well-being smartphone apps can provide a cost-effective solution to addressing unhealthy behaviors. The selection of these apps tends to occur in commercial app stores, where thousands of health apps are available. Their uptake is often influenced by popularity indicators. However, these indicators are not necessarily associated with app effectiveness or evidence-based content. Alternative routes to app selection are increasingly available, such as via curated app portals, but little is known about people's experiences of them. Objective: The aim of this study is to explore how people select health apps on the internet and their views on curated app portals. Methods: A total of 18 UK-based adults were recruited through social media and asked during an in-person meeting to verbalize their thoughts while searching for a health or well-being app on the internet on a platform of their choice. The search was then repeated on 2 curated health app portals: the National Health Service Apps Library and the Public Health England One You App portal. This was followed by semistructured interviews. Data were analyzed using framework analysis, informed by the Capability, Opportunity, Motivation-Behavior model and the Theoretical Domains Framework. Results: Searching for health and well-being apps on the internet was described as a minefield. App uptake appeared to be influenced by participants' capabilities such as app literacy skills and health and app awareness, and opportunities including the availability of apps, app esthetics, the price of an app, and social influences. Motivation factors that seemed to affect the uptake were perceived competence, time efficiency, perceived utility and accuracy of an app, transparency about data protection, commitment and social identity, and a wide range of emotions. Social influences and the perceived utility of an app were highlighted as particularly important. Participants were not previously aware of curated portals but found the concept appealing. Curated health app portals appeared to engender trust and alleviate data protection concerns. Although apps listed on these were perceived as more trustworthy, their presentation was considered disappointing. This disappointment seemed to stem from the functionality of the portals, lack of user guidance, and lack of tailored content to an individual's needs. Conclusions: The uptake of health and well-being apps appears to be primarily affected by social influences and the perceived utility of an app. App uptake via curated health app portals perceived as credible may mitigate concerns related to data protection and accuracy, but their implementation must better meet user needs and expectations.},
+  copyright = {Unless stated otherwise, all articles are open-access distributed under the terms of the Creative Commons Attribution License (http://creativecommons.org/licenses/by/4.0/), which permits unrestricted use, distribution, and reproduction in any medium, provided the original work ("first published in JMIR mHealth and uHealth...") is properly cited with original URL and bibliographic citation information. The complete bibliographic information, a link to the original publication on http://mhealth.jmir.org/, as well as this copyright and license information must be included.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Szinay et al_2021_Influences on the Uptake of Health and Well-being Apps and Curated App Portals.pdf}
+}
+
 @article{tamPerceptionPreferredReporting2019,
   title = {Perception of the {{Preferred Reporting Items}} for {{Systematic Reviews}} and {{Meta-Analyses}} ({{PRISMA}}) Statement of Authors Publishing Reviews in Nursing Journals: A Cross-Sectional Online Survey},
   shorttitle = {Perception of the {{Preferred Reporting Items}} for {{Systematic Reviews}} and {{Meta-Analyses}} ({{PRISMA}}) Statement of Authors Publishing Reviews in Nursing Journals},
@@ -2492,6 +2581,24 @@
   abstract = {This paper describes an approach that we have evolved for developing successful digital interventions to help people manage their health or illness. We refer to this as the \&\#8220;person-based\&\#8221; approach to highlight the focus on understanding and accommodating the perspectives of the people who will use the intervention. While all intervention designers seek to elicit and incorporate the views of target users in a variety of ways, the person-based approach offers a distinctive and systematic means of addressing the user experience of intended behavior change techniques in particular and can enhance the use of theory-based and evidence-based approaches to intervention development. There are two key elements to the person-based approach. The first is a developmental process involving qualitative research with a wide range of people from the target user populations, carried out at every stage of intervention development, from planning to feasibility testing and implementation. This process goes beyond assessing acceptability, usability, and satisfaction, allowing the intervention designers to build a deep understanding of the psychosocial context of users and their views of the behavioral elements of the intervention. Insights from this process can be used to anticipate and interpret intervention usage and outcomes, and most importantly to modify the intervention to make it more persuasive, feasible, and relevant to users. The second element of the person-based approach is to identify \&\#8220;guiding principles\&\#8221; that can inspire and inform the intervention development by highlighting the distinctive ways that the intervention will address key context-specific behavioral issues. This paper describes how to implement the person-based approach, illustrating the process with examples of the insights gained from our experience of carrying out over a thousand interviews with users, while developing public health and illness management interventions that have proven effective in trials involving tens of thousands of users.},
   langid = {english},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yardley et al_2015_The Person-Based Approach to Intervention Development.pdf}
+}
+
+@article{yardleyUnderstandingReactionsInternetdelivered2010,
+  title = {Understanding Reactions to an Internet-Delivered Health-Care Intervention: Accommodating User Preferences for Information Provision},
+  shorttitle = {Understanding Reactions to an Internet-Delivered Health-Care Intervention},
+  author = {Yardley, Lucy and Morrison, Leanne G. and Andreou, Panayiota and Joseph, Judith and Little, Paul},
+  year = {2010},
+  month = sep,
+  journal = {BMC Medical Informatics and Decision Making},
+  volume = {10},
+  number = {1},
+  pages = {52},
+  issn = {1472-6947},
+  doi = {10.1186/1472-6947-10-52},
+  urldate = {2023-11-16},
+  abstract = {It is recognised as good practice to use qualitative methods to elicit users' views of internet-delivered health-care interventions during their development. This paper seeks to illustrate the advantages of combining usability testing with 'theoretical modelling', i.e. analyses that relate the findings of qualitative studies during intervention development to social science theory, in order to gain deeper insights into the reasons and context for how people respond to the intervention. This paper illustrates how usability testing may be enriched by theoretical modelling by means of two qualitative studies of users' views of the delivery of information in an internet-delivered intervention to help users decide whether they needed to seek medical care for their cold or flu symptoms.},
+  keywords = {Diagnostic Question,Insuperable Barrier,Social Science Theory,Usability Testing,Vocational Qualification},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yardley et al_2010_Understanding reactions to an internet-delivered health-care intervention.pdf}
 }
 
 @misc{YourWebsiteYour,
