--- a/references.bib
+++ b/references.bib
@@ -721,6 +721,25 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/de Jong et al_2021_A meta-review demonstrates improved reporting quality of qualitative reviews.pdf}
 }
 
+@article{dejongReaderFocusedTextEvaluation1997,
+  title = {Reader-{{Focused Text Evaluation}}: {{An Overview}} of {{Goals}} and {{Methods}}},
+  shorttitle = {Reader-{{Focused Text Evaluation}}},
+  author = {DEJONG, {\relax MENNO} and SCHELLENS, PETER JAN},
+  year = {1997},
+  month = oct,
+  journal = {Journal of Business and Technical Communication},
+  volume = {11},
+  number = {4},
+  pages = {402--432},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1050-6519},
+  doi = {10.1177/1050651997011004003},
+  urldate = {2022-10-17},
+  abstract = {This article presents a review of the literature on reader-focused text evaluation. First, an account is given of the document characteristics that can be evaluated. Then the possible functions of evaluations are considered, a distinction being made between verifying, troubleshooting, and choice-supporting research. Finally, an overview is presented of methods appropriate for the various document characteristics and evaluation functions. Relevant research findings on the methodological strengths and constraints of each method are discussed.},
+  langid = {english},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/DEJONG_SCHELLENS_1997_Reader-Focused Text Evaluation.pdf}
+}
+
 @article{devriesProtocolFormatPreparation2015,
   title = {A Protocol Format for the Preparation, Registration and Publication of Systematic Reviews of Animal Intervention Studies},
   author = {{de Vries}, Rob B. M. and Hooijmans, Carlijn R. and Langendam, Miranda W. and {van Luijk}, Judith and Leenaars, Marlies and {Ritskes-Hoitinga}, Merel and Wever, Kimberley E.},
@@ -2046,6 +2065,13 @@
   keywords = {Publishing,Quality Control,Randomized Controlled Trials as Topic}
 }
 
+@misc{qsrinternationalptyltd.NVivo2020,
+  title = {{{NVivo}}},
+  author = {{QSR International Pty Ltd.}},
+  year = {2020},
+  month = mar
+}
+
 @misc{QuartoOpenSource,
   title = {Quarto: {{An}} Open Source Technical Publishing System for Creating Beautiful Articles, Websites, Blogs, Books, Slides, and More. {{Supports Python}}, {{R}}, {{Julia}}, and {{JavaScript}}.},
   journal = {Quarto},
@@ -2446,6 +2472,20 @@
   title = {Usage {{Statistics}} and {{Market Share}} of {{Traffic Analysis Tools}} for {{Websites}}, {{July}} 2023},
   urldate = {2023-07-31},
   howpublished = {https://w3techs.com/technologies/overview/traffic\_analysis}
+}
+
+@book{UXFiveSecondRules2014,
+  title = {The {{UX Five-Second Rules}}},
+  year = {2014},
+  month = jan,
+  pages = {19--76},
+  publisher = {{Morgan Kaufmann}},
+  doi = {10.1016/B978-0-12-800534-7.00002-0},
+  urldate = {2021-07-29},
+  abstract = {The five-second rules are a set of guidelines designed to assist researchers who wish to use the method to test their designs. They are written with a\ldots},
+  isbn = {978-0-12-800534-7},
+  langid = {english},
+  file = {/Users/james/Zotero/storage/MVPTWKRQ/B9780128005347000020.html}
 }
 
 @article{vandenbrouckeStrengtheningReportingObservational2007a,
