--- a/references.bib
+++ b/references.bib
@@ -1826,6 +1826,24 @@
   langid = {english}
 }
 
+@inproceedings{nielsenMathematicalModelFinding1993,
+  title = {A Mathematical Model of the Finding of Usability Problems},
+  booktitle = {Proceedings of the {{INTERACT}} '93 and {{CHI}} '93 {{Conference}} on {{Human Factors}} in {{Computing Systems}}},
+  author = {Nielsen, Jakob and Landauer, Thomas K.},
+  year = {1993},
+  month = may,
+  series = {{{CHI}} '93},
+  pages = {206--213},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/169059.169166},
+  urldate = {2023-12-12},
+  abstract = {For 11 studies, we find that the detection of usability problems as a function of number of users tested or heuristic evaluators employed is well modeled as a Poisson process. The model can be used to plan the amount of evaluation required to achieve desired levels of thoroughness or benefits. Results of early tests can provide estimates of the number of problems left to be found and the number of additional evaluations needed to find a given fraction. With quantitative evaluation costs and detection values, the model can estimate the numbers of evaluations at which optimal cost/benefit ratios are obtained and at which marginal utility vanishes. For a ``medium'' example, we estimate that 16 evaluations would be worth their cost, with maximum benefit/cost ratio at four.},
+  isbn = {978-0-89791-575-5},
+  keywords = {cost-benefit analysis,heuristic evaluation,iterative design,Poisson models,usability engineering,usability problems,user testing},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Nielsen_Landauer_1993_A mathematical model of the finding of usability problems.pdf}
+}
+
 @article{obrienStandardsReportingQualitative2014,
   title = {Standards for {{Reporting Qualitative Research}}: {{A Synthesis}} of {{Recommendations}}},
   shorttitle = {Standards for {{Reporting Qualitative Research}}},
