drafting outline for Discussion

--- a/references.bib
+++ b/references.bib
@@ -1710,6 +1710,24 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Michie et al_2005_Making psychological theory useful for implementing evidence based practice.pdf}
 }
 
+@article{millsAdvancingComplexityScience2019,
+  title = {Advancing Complexity Science in Healthcare Research: The Logic of Logic Models},
+  shorttitle = {Advancing Complexity Science in Healthcare Research},
+  author = {Mills, Thomas and Lawton, Rebecca and Sheard, Laura},
+  year = {2019},
+  month = mar,
+  journal = {BMC Medical Research Methodology},
+  volume = {19},
+  number = {1},
+  pages = {55},
+  issn = {1471-2288},
+  doi = {10.1186/s12874-019-0701-4},
+  urldate = {2024-01-01},
+  abstract = {Logic models are commonly used in evaluations to represent the causal processes through which interventions produce outcomes, yet significant debate is currently taking place over whether they can describe complex interventions which adapt to context. This paper assesses the logic models used in healthcare research from a complexity perspective. A typology of existing logic models is proposed, as well as a formal methodology for deriving more flexible and dynamic logic models.},
+  keywords = {Complex interventions,Complexity,Complexity science,Context,Facilitation,Implementation models,Logic models,Program theory},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Mills et al_2019_Advancing complexity science in healthcare research.pdf}
+}
+
 @article{moherDescribingReportingGuidelines2011a,
   title = {Describing Reporting Guidelines for Health Research: A Systematic Review},
   shorttitle = {Describing Reporting Guidelines for Health Research},
