--- a/references.bib
+++ b/references.bib
@@ -815,6 +815,16 @@
   howpublished = {https://www.equator-network.org/analytics}
 }
 
+@misc{ESRCRadicallyExpand2023,
+  title = {{{ESRC}} to Radically Expand {{UK}} Behavioural Research Capacity},
+  year = {2023},
+  month = nov,
+  urldate = {2024-01-17},
+  abstract = {\textsterling 17 million investment will transform the UK's ability to address major societal challenges using knowledge gained from research into human behaviour.},
+  howpublished = {https://www.ukri.org/news/esrc-to-radically-expand-uk-behavioural-research-capacity/},
+  langid = {american}
+}
+
 @misc{experienceGuideUsingUserExperience,
   title = {A {{Guide}} to {{Using User-Experience Research Methods}}},
   author = {Experience, World Leaders in Research-Based User},
