updating to book

--- a/references.bib
+++ b/references.bib
@@ -724,7 +724,7 @@
 @article{dejongReaderFocusedTextEvaluation1997,
   title = {Reader-{{Focused Text Evaluation}}: {{An Overview}} of {{Goals}} and {{Methods}}},
   shorttitle = {Reader-{{Focused Text Evaluation}}},
-  author = {DEJONG, {\relax MENNO} and SCHELLENS, PETER JAN},
+  author = {De Jong, Menno and Schellens, Peter Jan},
   year = {1997},
   month = oct,
   journal = {Journal of Business and Technical Communication},
