fix render errors

--- a/references.bib
+++ b/references.bib
@@ -962,6 +962,41 @@
   howpublished = {https://support.google.com/firebase/answer/9268042?sjid=11808073354477924035-EU\&visit\_id=638263997154270219-1141820337\&rd=1}
 }
 
+@article{garnettDevelopmentDrinkLess2019,
+  title = {The Development of {{Drink Less}}: An Alcohol Reduction Smartphone App for Excessive Drinkers},
+  shorttitle = {The Development of {{Drink Less}}},
+  author = {Garnett, Claire and Crane, David and West, Robert and Brown, Jamie and Michie, Susan},
+  year = {2019},
+  month = mar,
+  journal = {Translational Behavioral Medicine},
+  volume = {9},
+  number = {2},
+  pages = {296--307},
+  issn = {1869-6716},
+  doi = {10.1093/tbm/iby043},
+  urldate = {2021-11-03},
+  abstract = {Excessive alcohol consumption poses a serious problem for public health. Digital behavior change interventions have the potential to help users reduce their drinking. In accordance with Open Science principles, this paper describes the development of a smartphone app to help individuals who drink excessively to reduce their alcohol consumption. Following the UK Medical Research Council's guidance and the Multiphase Optimization Strategy, development consisted of two phases: (i) selection of intervention components and (ii) design and development work to implement the chosen components into modules to be evaluated further for inclusion in the app. Phase 1 involved a scoping literature review, expert consensus study and content analysis of existing alcohol apps. Findings were integrated within a broad model of behavior change (Capability, Opportunity, Motivation-Behavior). Phase 2 involved a highly iterative process and used the ``Person-Based'' approach to promote engagement. From Phase 1, five intervention components were selected: (i) Normative Feedback, (ii) Cognitive Bias Re-training, (iii) Self-monitoring and Feedback, (iv) Action Planning, and (v) Identity Change. Phase 2 indicated that each of these components presented different challenges for implementation as app modules; all required multiple iterations and design changes to arrive at versions that would be suitable for inclusion in a subsequent evaluation study. The development of the Drink Less app involved a thorough process of component identification with a scoping literature review, expert consensus, and review of other apps. Translation of the components into app modules required a highly iterative process involving user testing and design modification.},
+  keywords = {_tablet},
+  file = {/Users/james/Zotero/storage/EG9XJKCS/Garnett et al_2019_The development of Drink Less.pdf;/Users/james/Zotero/storage/RIJDWQ7I/4992624.html}
+}
+
+@misc{garnettRefiningContentDesign2021,
+  title = {Refining the Content and Design of an Alcohol Reduction App, {{{\emph{Drink Less}}}}, to Improve Its Usability and Effectiveness: A Mixed Methods Approach},
+  shorttitle = {Refining the Content and Design of an Alcohol Reduction App, {{{\emph{Drink Less}}}}, to Improve Its Usability and Effectiveness},
+  author = {Garnett, Claire and Perski, Olga and Michie, Susan and West, Robert and Field, Matt and Kaner, Eileen and Munaf{\`o}, Marcus R. and Greaves, Felix and Hickman, Matthew and Burton, Robyn and Brown, Jamie},
+  year = {2021},
+  month = jun,
+  number = {10:511},
+  institution = {F1000Research},
+  doi = {10.12688/f1000research.51416.1},
+  urldate = {2021-11-03},
+  abstract = {Background: Digital interventions have the potential to reduce alcohol consumption, although evidence on the effectiveness of apps is lacking. Drink Less is a popular, evidence-informed app with good usability, putting it in a strong position to be improved upon prior to conducting a confirmatory evaluation. This paper describes the process of refining Drink Less to improve its usability and likely effectiveness. Methods: The refinement consisted of three phases and involved qualitative and quantitative (mixed) methods: i) identifying changes to app content, based on findings from an initial evaluation of Drink Less , an updated review of digital alcohol interventions and a content analysis of user feedback; ii) designing new app modules with public input and a consultation with app developers and researchers; and iii) improving the app's usability through user testing. Results: As a result of the updated review of digital alcohol interventions and user feedback analysis in Phase 1, three new modules: `Behaviour Substitution', `Information about Antecedents' and `Insights', were added to the app. One existing module -- `Identity Change' -- was removed based on the initial evaluation of Drink Less . Phases 2 and 3 resulted in changes to existing features, such as improving the navigational structure and onboarding process, and clarifying how to edit drinks and goals. Conclusions: A mixed methods approach was used to refine the content and design of Drink Less , providing insights into how to improve its usability and likely effectiveness. Drink Less is now ready for a confirmatory evaluation.},
+  copyright = {http://creativecommons.org/licenses/by/4.0/},
+  langid = {english},
+  keywords = {_tablet,alcohol,behaviour change,development,digital,Drink Less app,refinement,smartphone app},
+  file = {/Users/james/Zotero/storage/QVZJ4KSA/Garnett et al_2021_Refining the content and design of an alcohol reduction app, iDrink Less-i,.pdf}
+}
+
 @article{girayAssessmentKnowledgeAwareness2020a,
   title = {Assessment of the Knowledge and Awareness of a Sample of Young Researcher Physicians on Reporting Guidelines and the {{EQUATOR}} Network: {{A}} Single Center Cross-Sectional Study},
   shorttitle = {Assessment of the Knowledge and Awareness of a Sample of Young Researcher Physicians on Reporting Guidelines and the {{EQUATOR}} Network},
